--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -19,6 +19,7 @@
         <h5>{{ post.price }}원</h5>
         <h5>{{ post.score }}점/5점</h5>
         <h5>{{ post.created_date }}</h5>
+        <img src="{{ post.img.jpg }}" style="height:200px; width:200px" />
     </div>
 
     <ul>
