--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -10,11 +10,12 @@
     {% extends "home.html" %}
     {% block content %}
     <h1> 자네 무슨 책을 읽었나 ! </h1>
-    <form method = "POST">{% csrf_token %}
+    <form method = "POST" enctype='multipart/form-data'>
+        {% csrf_token %}
     {% comment %} post형식을 쓰려면 csrf_token이 반드시 필요 {% endcomment %}
         {{ form.as_p }}
         {% comment %} form 각각의 카테고리를 p태그 형식으로 달아주기 {% endcomment %}
-        <button type = 'submit'> 제출! </button>
+        <input type = 'submit'> 제출! </button>
     </form>
     {% endblock %}
 </body>
