--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    {% extends "home.html" %}
-    {% block content %}
-    <h1> 자네 무슨 책을 읽었나 ! </h1>
+{% extends "base.html" %}
+{% block content %}
     <form method = "POST" enctype='multipart/form-data'>
         {% csrf_token %}
     {% comment %} post형식을 쓰려면 csrf_token이 반드시 필요 {% endcomment %}
